<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Kassenschnitt</string>
    <string name="app_version">Version 2.0.0</string>

    <string name="action_about">About</string>
    <string name="action_add_item">Add new entry</string>
    <string name="action_best_in_year">Annual statistics</string>
    <string name="action_calc_all_months">Total balance</string>
    <string name="action_calc_specific_month">Monthly balance</string>
    <string name="action_calc_specific_year">Annual balance</string>
    <string name="action_changelog">Changelog</string>
    <string name="action_change_orientation">Rotate screen</string>
    
    <string name="button_negative">Cancel</string>
    <string name="button_positive">Okay</string>

    <string name="cab_change">Edit entry</string>
    <string name="cab_checked_string">selected</string>
    <string name="cab_delete">Delete entry</string>

    <string name="company_name">Gabriel Daenner Medien</string>

    <string name="confirmation_1">Sure, that\u0020</string>
    <string name="confirmation_2">\u0020element(s) should be deleted?"</string>

    <string name="copyright_info">© 2018-2020</string>

    <string name="dialog_add_item">Create new entry</string>
    <string name="dialog_edit_item">Change entry</string>
    <string name="dialog_search">Search for</string>

    <string name="error_dennis_nedry">Ah ah ah! You did not say the magic word\n\n[Processing of the arguments is not possible]</string>
    <string name="error_elements_missing">One or more fields contain no text.\nNo change made to database.</string>
    <string name="error_empty_search">No text available in the search box.\nSearch operation aborted.</string>

    <string name="month_january">January</string>
    <string name="month_february">February</string>
    <string name="month_march">March</string>
    <string name="month_april">April</string>
    <string name="month_may">May</string>
    <string name="month_june">June</string>
    <string name="month_july">July</string>
    <string name="month_august">August</string>
    <string name="month_september">September</string>
    <string name="month_october">October</string>
    <string name="month_november">November</string>
    <string name="month_december">December</string>

    <string name="msg_changelog">Changelog</string>
    <string name="msg_confirmation">Confirmation</string>
    <string name="msg_error">Error</string>
    <string name="msg_result">Result</string>
    <string name="msg_statistics">Statistics</string>

    <string name="resource_day">Day:</string>
    <string name="resource_money">Money:</string>
    <string name="resource_month">Month:</string>
    <string name="resource_weekday">W.day:</string>
    <string name="resource_year">Year:</string>

    <string name="result_average">Average</string>
    <string name="result_complete_1">Since the first entry (</string>
    <string name="result_complete_2">\u0020Days)</string>
    <string name="result_complete_3">\u0020Euro have been taken.</string>
    <string name="result_currency">€</string>
    <string name="result_month_1">Till now (</string>
    <string name="result_month_2">\u0020Days)</string>
    <string name="result_month_3">\u0020Euro have been taken.</string>
    <string name="result_statistics">Top days of the year\u0020</string>
    <string name="result_year_1">Within\u0020</string>
    <string name="result_year_2">\u0020Days)</string>
    <string name="result_year_3">\u0020Euro have been taken.</string>
    
    <string name="weekday_monday">Monday</string>
    <string name="weekday_tuesday">Tuesday</string>
    <string name="weekday_wednesday">Wednesday</string>
    <string name="weekday_thursday">Thursday</string>
    <string name="weekday_friday">Friday</string>
    <string name="weekday_saturday">Saturday</string>
    <string name="weekday_sunday">Sunday</string>

    <string name="weekday_monday_short">Mo.</string>
    <string name="weekday_tuesday_short">Tu.</string>
    <string name="weekday_wednesday_short">We.</string>
    <string name="weekday_thursday_short">Th.</string>
    <string name="weekday_friday_short">Fr.</string>
    <string name="weekday_saturday_short">Sa.</string>
    <string name="weekday_sunday_short">Su.</string>
</resources>
