<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_add_item"
        android:title="@string/action_add_item"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_calc_specific_month"
        android:title="@string/action_calc_specific_month"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_calc_specific_year"
        android:title="@string/action_calc_specific_year"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_calc_all_months"
        android:title="@string/action_calc_all_months"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_best_in_year"
        android:title="@string/action_best_in_year"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_change_orentation"
        android:title="@string/action_change_orientation"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
