<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/resource_day"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:layout_marginRight="5sp"
                    android:layout_marginEnd="5sp" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_weight="3"
                    android:id="@+id/editText_new_day" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/resource_year"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:layout_marginRight="5sp"
                    android:layout_marginEnd="5sp" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_weight="3"
                    android:id="@+id/editText_new_year" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/resource_weekday"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:layout_marginRight="5sp"
                    android:layout_marginEnd="5sp" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:layout_weight="3"
                    android:id="@+id/editText_new_weekday" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/resource_money"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:layout_marginRight="5sp"
                    android:layout_marginEnd="5sp" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:layout_weight="3"
                    android:id="@+id/editText_new_money" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
